BUGfix, remove form order list, BUGfix overflow on x axis

--- a/public/styles/orders.css
+++ b/public/styles/orders.css
@@ -18,3 +18,7 @@ body.modal-active {
 .cancel-button {
   text-align-last: center
 }
+
+.center-table {
+  text-align-last: center;
+}
